tests/validation/10_unless.spectra
// Teste 10: Unless (negação de if)
module test_unless;

fn test_unless(value: int) -> int {
    unless value < 10 {
        return 100;
    } else {
        return 0;
    }
}

fn main() -> int {
    let r1 = test_unless(15);
    let r2 = test_unless(5);
    return r1 + r2;
}
